Fix contact form height on mobile

--- a/styles.css
+++ b/styles.css
@@ -404,7 +404,10 @@ footer a:hover {
   }
 
   section iframe {
-    height: auto;
-    min-height: 200px;
+    min-height: 500px;
+  }
+
+  #contact iframe {
+    min-height: 550px;
   }
 }
